fix accordion style with icons & alignment

--- a/packages/@coorpacademy-components/src/molecule/app-player/popin/popin-header/style.css
+++ b/packages/@coorpacademy-components/src/molecule/app-player/popin/popin-header/style.css
@@ -62,7 +62,7 @@
 .titleElement {
   margin: 0;
   font-weight: normal;
-  margin-left: 32px;
+  margin-left: 35px;
 }
 
 .subtitle {
