--- a/packages/@coorpacademy-components/src/organism/accordion/part/style.css
+++ b/packages/@coorpacademy-components/src/organism/accordion/part/style.css
@@ -3,25 +3,49 @@
 @value white from colors;
 @value dark from colors;
 @value light from colors;
+@value xtraLightGrey from colors;
 
-.title {
+.header {
   height: 50px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
   width: 100%;
   box-sizing: border-box;
   background-color: light;
   cursor: pointer;
+  border-bottom: 1px solid xtraLightGrey;
+  transition: background-color 0.3s;
+  color: dark;
 }
 
-.title h3 {
+.header:hover {
+  background-color: xtraLightGrey;
+}
+
+.title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 35px;
+}
+
+.titleLabel {
   font-family: 'Open Sans';
   font-size: 15px;
   font-weight: 700;
-  color: dark;
-  margin: 0;
+}
+
+.titleIcon {
+  width: 22px;
+  height: 22px;
+  margin-right: 15px;
+}
+
+.icon {
+  width: 17px;
+  height: 17px;
+  margin-right: 35px;
 }
 
 .container {
@@ -41,9 +65,4 @@
 
 .none {
   display: none;
-}
-
-.icon {
-  width: 24px;
-  height: 24px;
 }
