--- a/packages/@coorpacademy-components/src/template/app-player/popin-correction/style.css
+++ b/packages/@coorpacademy-components/src/template/app-player/popin-correction/style.css
@@ -66,7 +66,7 @@
 /* Question -------------- */
 
 .question {
-  padding: 16px 48px;
+  padding: 16px 35px;
   background-color: white;
 }
 
